--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -8,21 +8,38 @@ See http://pspkox.wikia.com/wiki/SPMP8000_PSPKOX_Wiki for background info.
 
 As one of the first steps the hardware needs to be documented.
 
-Memory Map (updated, based on [http://spmp8000.wikia.com/wiki/Memory_map 1])
+Based on the code, the following are the peripheral base addresses:
 
-||0x0000.0000 - 0x00f0.0000||RAM||
-||0x9800.0000 - 0x9D7F.FFFF||Peripherials||
-||0x9D80.0000 - 0x9D80.8000||SRAM (32k)||
-||0xFFFF.0000 - 0xFFFF.7FFF||Boot ROM (32k)||
 
-  * Core
-  * Clock subsystem
-  * Interrupt controller
-  * [GPIO]
-  * UART
-  * I2C and I2C devices
-  * I2S and Codec
-  * SPI
-  * LCD
-  * 2D engine
-  * TV encoder
+||0x9000.0000||Timer A||
+||0x9000.1000||Timer WDT||
+||0x9000.2000||I2C S0||
+||0x9000.5000|| ||
+||0x9000.5100||SCU1 (System Control Unit?)||
+||0x9200.5000|| ||
+||0x9200.5100||SCU2||
+||0x9000.A000||[GPIO]||
+||0x9000.B000||Real Time Clock||
+||0x9053.2000||CEVA engine||
+||0x9001.0000||Vectored IRQ controller 0||
+||0x9002.0000||Vectored IRQ controller 1||
+||0x9200.2000||Rotator||
+||0x9200.6000||2D engine||
+||0x9200.7000||Scale engine||
+||0x92B0.0000||AHB DMA||
+||0x92B0.0000||SPI||
+||0x92B0.3000||I2C P0||
+||0x92B0.4000||UART0||
+||0x92B0.6000||UART2||
+||0x92B0.8000||SSP||
+||0x92B0.B000||SD card controller||
+||0x9300.3000||CSI||
+||0x9300.6000||Usb Device controller||
+||0x9300.7000||Clock controller||
+||0x9301.0000||APB DMA||
+||0x9301.1D00||I2S RX||
+||0x9301.2000||I2S TX||
+||0x9301.7000||I2S clock||
+||0x9301.F000||Audio Codec||
+||0x9300.8000||NAND controller||
+||0x9300.A000||BCH ?||
