--- a/wiki/VIC.wiki
+++ b/wiki/VIC.wiki
@@ -15,5 +15,9 @@ Looking at the ISR routines, the following are the used addresses:
 
 This corresponds nicely to the [http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ddi0273a/I1006637.html ARM PL192 VIC PrimeCell] registers, so it quite sure that is being used.
 
+TODO: Prove by reading the PrimeCell ID registers at [http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ddi0273a/I1006637.html 0xFF0-0xFFC].
+
+= IRQ source mapping =
+
 For finding out the individual peripheral IRQ bits, one needs to
 look at the irq attach routine parameters called from the init of the peripheral.
